<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Geometry Math</string>
    <string name="team">By team 2</string>
    <string name="selector_menu">Seleccione el cálculo</string>

    <string name="daniel_perimetrotriangulo">Perímetro del triángulo</string>
    <string name="perimetroDaniel">\El perímetro del triángulo es: \</string>
    <string name="mensaje_area_cuadro">\El área del cuadro es:  \</string>
    <string name="AreaTriangulo">Área del Triángulo</string>
    <string name="baseTriangulo">Base</string>
    <string name="alturaTriangulo">Altura</string>
    //Perimetro Hexagono
    <string name="botonCalcular">Calcular</string>
    <string name="Area_Triangulo">"Área del Triángulo: "</string>
    <string name="activity_perimetro_hexagono_text_view_tipo_hexagono">Tu hexágono es:</string>
    <string name="activity_perimetro_hexagono_radio_button_regular">Regular</string>
    <string name="activity_perimetro_hexagono_radio_button_irregular">Irregular</string>
    <string name="activity_perimetro_hexagono_edt_hint_lado1" tools:ignore="Typos">Lado1</string>
    <string name="activity_perimetro_hexagono_edt_hint_lado2">Lado2</string>
    <string name="activity_perimetro_hexagono_edt_hint_lado3">Lado3</string>
    <string name="activity_perimetro_hexagono_edt_hint_lado4">Lado4</string>
    <string name="activity_perimetro_hexagono_edt_hint_lado5">Lado5</string>
    <string name="activity_perimetro_hexagono_edt_hint_lado6">Lado6</string>
    <string name="activity_perimetro_hexagono_button_calcular">Calcular</string>
    <string name="activity_perimetro_hexagono_btn_home">home</string>
    <string name="lado_cuado">Valor del lado del cuadro</string>

    //Area Hexagono
    <string name="title_area_hexagono">Área del triangulo</string>
    <string name="area_hexagono">\"El área del hexagono es: \"</string>
    <string name="ah_text_view_tipo_hexagono">Tu hexágono es:</string>
    <string name="ah_radio_button_regular">Regular</string>
    <string name="ah_radio_button_irregular">Irregular</string>
    <string name="ah_edt_hint_lado1">Lado 1</string>
    <string name="ah_edt_hint_lado2">Lado 2</string>
    <string name="ah_edt_hint_lado3">Lado 3</string>
    <string name="ah_edt_hint_lado4">Lado 4</string>
    <string name="ah_edt_hint_lado5">Lado 5</string>
    <string name="ah_edt_hint_lado6">Lado 6</string>
    <string name="ah_text_boton_calcular">Calcular</string>
    <string name="ah_btn_home">home</string>

    <string name="ah_altura1">Altura 1</string>
    <string name="ah_altura2">Altura 2</string>
    <string name="ah_altura3">Altura 3</string>
    <string name="ah_altura4">Altura 4</string>
    <string name="ah_altura5">Altura 5</string>
    <string name="ah_altura6">Altura 6</string>


    <string name="pPentagono_sizeA">Lado A</string>
    <string name="pPentagono_sizeB">Lado B</string>
    <string name="pPentagono_sizeC">Lado C</string>
    <string name="pPentagono_sizeD">Lado D</string>
    <string name="pPentagono_sizeE">Lado E</string>
    <string name="pPentagono_button">OPERAR</string>
    <string name="pPentagono_resultInfo">RESULTADO</string>
    <string name="pPentagono_error_sideA_empty">El lado A está vacio</string>
    <string name="pPentagono_error_sideB_empty">El lado B está vacio</string>
    <string name="pPentagono_error_sideC_empty">El lado C está vacio</string>
    <string name="pPentagono_error_sideD_empty">El lado D está vacio</string>
    <string name="pPentagono_error_sideE_empty">El lado E está vacio</string>
    <string name="Pentagono_sizeA">Lado A</string>


    //Para area de pentagono
    <string name="Pentagono_sizeB">Lado B</string>
    <string name="Pentagono_sizeC">Lado C</string>
    <string name="Pentagono_sizeD">Lado D</string>
    <string name="Pentagono_sizeE">Lado E</string>
    <string name="Pentagono_apothem">Apotema L</string>
    <string name="Calculate_area">Calcular área</string>
    <string name="Pentagono_resultInfo">RESULTADO</string>
    <string name="lado_A">Lado A</string>


    //Perimetro del rectangulo
    <string name="lado_B">Lado B</string>
    <string name="res_per_rec">\El perímetro del rectángulo es: \</string>
    <string name="perimetro_rectangulo">Perímetro de un Rectángulo</string>

    //recntangulo
    <string name="area_rectangulo">Area rectangulo = Base x Altura</string>
    <string name="rectangulo_area_resultado">el área del rectangulo :</string>
    <string name="area_cuadro">Área de un Cuadro</string>
    <string name="home">home</string>
    <string name="lado_1">Lado 1</string>
    <string name="lado_2">Lado 2</string>
    <string name="lado_3">Lado 3</string>

    <string-array name="actividades">
        <item>Área Cuadro</item>
        <item>Área Triángulo</item>
        <item>Perímetro Triángulo</item>
        <item>Área Rectángulo</item>
        <item>Perímetro Rectángulo</item>
        <item>Área de un Pentágono</item>
        <item>Perímetro de un Pentágono</item>
        <item>Área de un Hexágono</item>
        <item>Perímetro de un Hexágono</item>
    </string-array>
</resources>