<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.triangulo.AreaTrianguloActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/area_triangulo_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/Area_Triangulo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icon_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/area_triangulo"   />

        <EditText
            android:id="@+id/base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/baseTriangulo"
            android:inputType="numberDecimal"
            android:minWidth="50sp"
            android:minHeight="70sp"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alturaTriangulo"
            android:inputType="numberDecimal"
            android:minWidth="50sp"
            android:minHeight="70sp"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/botonCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonCalcular"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <TextView
            android:id="@+id/tvArea"
            android:layout_width="match_parent"
            android:layout_height="33dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_ppal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/home"
        android:focusable="true"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id= "@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/team"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>