<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cuadrado.AreaCuadroActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icon_app_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/imagen_area_cuadro" />

        <TextView
            android:id="@+id/area_cuadro_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/area_cuadro"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lado_a_edit_text"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/lado_cuado"
            android:inputType="numberDecimal"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/botonCalcular"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <TextView
            android:id="@+id/resultado_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_ppal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/home"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="ImageContrastCheck"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/team"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>